Handle new terraform resources (KeyPair,SecurityGroup,SecurityGroupRule)