@@ -4,24 +4,24 @@ import static org.eclipse.xpanse.modules.deployment.deployers.terraform.Terrafor
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
-import java.net.URI;
+import java.net.URL;
 import org.apache.commons.collections.CollectionUtils;
 import org.eclipse.xpanse.modules.deployment.deployers.terraform.resource.TfState;
 import org.eclipse.xpanse.modules.models.service.deploy.DeployResult;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-class HuaweiTerraformResourceHandlerTest {
+class HuaweiCloudTerraformResourceHandlerTest {
 
     private final ObjectMapper objectMapper = new ObjectMapper();
 
-    private final HuaweiTerraformResourceHandler huaweiHandler =
-            new HuaweiTerraformResourceHandler();
+    private final HuaweiCloudTerraformResourceHandler huaweiHandler =
+            new HuaweiCloudTerraformResourceHandler();
 
     @Test
     void handler() throws IOException {
         TfState tfState = objectMapper.readValue(
-                URI.create("file:src/test/resources/huawei-tfstate.json").toURL(), TfState.class);
+                new URL("file:src/test/resources/huawei-tfstate.json"), TfState.class);
         DeployResult deployResult = new DeployResult();
         deployResult.getPrivateProperties()
                 .put(STATE_FILE_NAME, objectMapper.writeValueAsString(tfState));
@@ -34,8 +34,7 @@ class HuaweiTerraformResourceHandlerTest {
     @Test
     void handler_destroy() throws IOException {
         TfState tfState = objectMapper.readValue(
-                URI.create("file:src/test/resources/huawei-tfstate-destroy.json").toURL(),
-                TfState.class);
+                new URL("file:src/test/resources/huawei-tfstate-destroy.json"), TfState.class);
         DeployResult deployResult = new DeployResult();
         deployResult.getPrivateProperties()
                 .put(STATE_FILE_NAME, objectMapper.writeValueAsString(tfState));
